flux/apps/calibre/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware

metadata:
  name: add-calibre-headers

spec:
  headers:
    customRequestHeaders:
      X-Scheme: https
