flux/apps/calibre/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: calibre

spec:
  selector:
    matchLabels:
      app: calibre

  template:
    metadata:
      labels:
        app: calibre

    spec:
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: config
        - name: ingest
          persistentVolumeClaim:
            claimName: ingest
        - name: library
          persistentVolumeClaim:
            claimName: library

      containers:
        - name: calibre
          image: ghcr.io/crocodilestick/calibre-web-automated
          imagePullPolicy: IfNotPresent

          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /cwa-book-ingest
              name: ingest
            - mountPath: /calibre-library
              name: library

          ports:
            - containerPort: 8083
              name: http
              protocol: TCP

          resources:
            requests:
              memory: "256Mi"
            limits:
              memory: "512Mi"
