flux/apps/calibre/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calibre

spec:
  selector:
    app: calibre

  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
