flux/apps/calibre/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: calibre
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: traefik-https-redirect@kubernetescrd, add-calibre-headers@kubernetescrd

spec:
  tls:
    - hosts:
        - calibre.bootleg.technology
      secretName: calibre-bootleg-technology
  rules:
    - host: calibre.bootleg.technology
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: calibre
                port:
                  name: http
